test comment changes

--- a/css/index.css
+++ b/css/index.css
@@ -100,7 +100,7 @@ p {
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
-
+/*test to commit*/
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
